src/main/java/lexical/test/failing/04.ru
/? ERROR: LEXICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 1 | 11 | Caracter invalido:   |
"holacapo\0"

